# github-trending-mcp

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/github_trending_mcp/: __init__.py  constants.py  fetcher.py  http_server.py  models.py  server.py  utils.py  validation.py
src/github_trending_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
